Adding new README.md. Including 'What do you need' and 'Setup'